--- a/action.yml
+++ b/action.yml
@@ -56,8 +56,6 @@ runs:
             awk '{
                 # Replace literal newlines with %0A
                 gsub(/\n/,"%0A");
-                # Replace bullet points with their encoded form
-                gsub(/•/,"%E2%80%A2");
                 # Print the processed line
                 print
             }' > "$tmp_file"
@@ -71,6 +69,10 @@ runs:
         # Cleanup
         rm -f tramline_input.json
         echo "Finishing up tramline input parsing..."
+        EOL
+
+        chmod +x parse_input.sh
+        ./parse_input.sh
       id: tramline
       shell: bash
 
