--- a/action.yml
+++ b/action.yml
@@ -25,6 +25,11 @@ outputs:
 runs:
   using: "composite"
   steps:
+    - name: setup-python
+      uses: actions/setup-python@v5
+      with:
+         python-version: '3.13'
+        
     - name: Parse Tramline Input
       shell: python
       id: tramline
