--- a/action.yml
+++ b/action.yml
@@ -25,18 +25,15 @@ outputs:
 runs:
   using: "composite"
   steps:
-    - run:
-      | python --version
+    - run: python --version
   
     - name: setup-python
       uses: actions/setup-python@v5
       with:
          python-version: '3.13'
-      run:
-       | python --version
+      run: python --version
 
-    - run:
-      | python --version
+    - run: python --version
         
     - name: Parse Tramline Input
       shell: python
